--- a/direction-of-attraction.tex
+++ b/direction-of-attraction.tex
@@ -25,75 +25,115 @@ Old High German only has proper attraction. Modern German only has inverse attra
 \end{table}
 
 
-    \subsection{Gothic}
 
 
+\subsection{Gothic}
 
-
-\ex. \tsc{ext:nom}, \tsc{int:acc}
-\ag. þ-an-ei frijos siuks ist\\
- D-\tsc{m.sg.acc}-\tsc{comp} sick is\\
- `(The one) whom you love is sick'
-
-\ex. \tsc{ext:nom}, \tsc{int:dat}
-\ex. \tsc{ext:nom}, \tsc{int:gen}
-
-\ex. \tsc{ext:acc}, \tsc{int:nom}
+\ex. \tsc{int:nom}, \tsc{ext:acc}
 \ag. jah þ-o-ei ist us Laudeikaion jus ussiggwaid\\
- and D-\tsc{f.sg.acc}-\tsc{comp} is from Laodicea you read\\
- `And read the one (which) is from Laodicea'
+ and D-\tsc{f.sg.acc}-\tsc{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
+ `and read that which is from Laodicea' \hfill Colossians 4:16, gloss and translation by \citealt[357]{harbert1978}
 
-\ex. \tsc{ext:acc}, \tsc{int:dat}
-\ex. \tsc{ext:acc}, \tsc{int:gen}
+ \ex. \tsc{int:nom}, \tsc{ext:dat}
+ \ag. þ-aim-ei iupa sind fraþjaiþ\\
+  D-\tsc{pl.dat}-\tsc{comp} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
+  `set your mind on those which are above' \hfill Colossians 3:2, gloss and translation by \citealt[339]{harbert1978}
 
-\ex. \tsc{ext:dat}, \tsc{int:nom}
-\ag. þ-aim-ei iupa sind fraþjaiþ\\
- D-\tsc{pl.dat}-\tsc{comp} above are {think on}\\
- `Set your mind on (those) which are above'
-
-\ex. \tsc{ext:dat}, \tsc{int:acc}
-\ag. hva nu wileiþ ei taujau þ-amm-ei qiþiþ þiudan Iudaie?\\
-what now you-want that I-do D-\tsc{m.sg.dat}-\tsc{comp} you-say king of-Jews\\
-`What do you want that I do to him (whom) you call the [king of] Jews?'
-
-\ex. \tsc{ext:dat}, \tsc{int:gen}
-
-\ex. \tsc{ext:gen}, \tsc{int:nom}
+\ex. \tsc{int:nom}, \tsc{ext:gen}
 \a. not attested
 
-\ex. \tsc{ext:gen}, \tsc{int:acc}
-\ag. ni waiht þ-iz-ei gasehvun\\
- not any D-\tsc{n.sg.gen}-\tsc{comp} they-saw\\
- `not any of that (which) they saw'
+\ex. \tsc{int:acc}, \tsc{ext:nom}
+\ag. þ-an-ei frijos siuks ist\\
+ D-\tsc{m.sg.acc}-\tsc{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
+ `the one whom you love is sick' \hfill John 11:3, gloss and translation by \citealt[342]{harbert1978}
+
+ \ex. \tsc{int:acc}, \tsc{ext:dat}
+ \ag. hva nu wileiþ ei taujau þ-amm-ei qiþiþ þiudan Iudaie?\\
+ what now want that do\scsub{[dat]} D-\tsc{m.sg.dat}-\tsc{comp} say\scsub{[acc]} king {of Jews}\\
+ `what now do you wish that I do to him whom you call King of the Jews?' \hfill Mark 15:12, gloss and translation by \citealt[339]{harbert1978}
+
+ \ex. \tsc{int:acc}, \tsc{ext:gen}
+ \ag. ni waiht þ-iz-ei gasehvun\\
+  not thing\scsub{[gen]} D-\tsc{n.sg.gen}-\tsc{comp} saw\scsub{[acc]}\\
+  `not any of that which they saw' \hfill Luke 9:36, gloss and translation by \citealt[340]{harbert1978}
+
+\ex. \tsc{int:dat}, \tsc{ext:nom}
+\ag. iþ þ-amm-ei leitil fraletada leitil frijod\\
+but D-\tsc{m.sg.dat}-\tsc{comp} little {is forgiven\scsub{[dat]}} little loves\scsub{[nom]}\\
+`but the one whom little is forgiven loves little' \hfill Luke 7:47, gloss and translation by \citealt[342]{harbert1978}
+
+\ex. \tsc{int:dat}, \tsc{ext:acc}
+\ag. ushafjands ana þ-amm-ei lag\\
+picking up on\scsub{[acc]} D-\tsc{m.sg.dat}-\tsc{comp} lay\scsub{[dat]}\\
+`picking up that on which he lay' \hfill Luke 5:25, gloss and translation by \citealt[343]{harbert1978}
+
+\ex. \tsc{int:dat}, \tsc{ext:gen}
+\a. not attested
+
+\ex.  \tsc{int:gen}, \tsc{ext:nom}
+\a. not attested
+
+\ex. \tsc{int:gen}, \tsc{ext:acc}
+\ag. bugei þ-iz-ei þaurbeima\\
+ buy\scsub{[acc]} D-\tsc{n.sg.gen}-\tsc{comp} need\scsub{[gen]}\\
+ `buy that which we need' \hfill John 13:29, gloss and translation by \citealt[343]{harbert1978}
+
+\ex. \tsc{int:gen}, \tsc{ext:dat}
+\a. not attested
 
 
-\ex. \tsc{ext:gen}, \tsc{int:dat}
+\begin{table}[h]
+  \center
+  \caption {Case attraction in headless relatives in Gothic}
+    \begin{minipage}{\linewidth}
+      \begin{tabularx}{\textwidth}{c|Y|Y|Y|Y}
+        \toprule
+          \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}
+              & \tsc{[nom]}
+              & \tsc{[acc]}
+              & \tsc{[dat]}
+              & \tsc{[gen]}
+              \\ \cmidrule(lr){1-5}
+          \tsc{[nom]}
+              & \colorbox{LG}{\tsc{nom}}
+              & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{acc}}}
+              & \diagbox[linecolor=white]{?\tsc{nom}}{\colorbox{DG}{\tsc{dat}}}
+              & \diagbox[linecolor=white]{?\tsc{nom}}{?\tsc{gen}}
+              \\ \cmidrule(lr){1-5}
+          \tsc{[acc]}
+              & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{?\tsc{nom}}
+              &	\colorbox{LG}{\tsc{acc}}
+              &	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{dat}}}
+              &	\diagbox[linecolor=white]{?\tsc{acc}}{\colorbox{DG}{\tsc{gen}}}
+              \\ \cmidrule(lr){1-5}
+          \tsc{[dat]}
+              & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{nom}}
+              &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{?\tsc{acc}}
+              & \colorbox{LG}{\tsc{dat}}
+              & \diagbox[linecolor=white]{?\tsc{dat}}{?\tsc{gen}}
+              \\ \cmidrule(lr){1-5}
+          \tsc{[gen]}
+              & \diagbox[linecolor=white]{?\tsc{gen}}{?\tsc{nom}}
+              & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{?\tsc{acc}}
+              & \diagbox[linecolor=white]{?\tsc{gen}}{?\tsc{dat}}
+              & \colorbox{LG}{\tsc{gen}}
+              \\
+        \bottomrule
+      \end{tabularx}
+    \end{minipage}
+\end{table}
 
-    \begin{table}[h]
-      \center
-      \caption {Case attraction in headless relatives in Gothic}
-        \begin{minipage}{\linewidth}
-          \begin{tabularx}{\textwidth}{c|Y|Y|Y|Y}
-            \toprule
-              \diagbox[linecolor=white]{\tsc{ext}}{\tsc{int}}	  & \tsc{[nom]}                                                       & \tsc{[acc]} 	                                                  & \tsc{[dat]} 											                              & \tsc{[gen]} 											                                \\ \cmidrule(lr){1-5}
-              \tsc{[nom]} 		                                  & \colorbox{LG}{\tsc{nom}} 			                                    & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{acc}}} & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{dat}}} & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{gen}}} 	\\ \cmidrule(lr){1-5}
-              \tsc{[acc]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{*\tsc{nom}} 	&	\colorbox{LG}{\tsc{acc}} 		                                   	&	\diagbox[linecolor=white]{*\tsc{acc}}{\colorbox{DG}{\tsc{dat}}} &	\diagbox[linecolor=white]{*\tsc{acc}}{\colorbox{DG}{\tsc{gen}}}   \\ \cmidrule(lr){1-5}
-              \tsc{[dat]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{nom}}	  &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{acc}} & \colorbox{LG}{\tsc{dat}} 			                                  & \diagbox[linecolor=white]{*\tsc{dat}}{\colorbox{DG}{\tsc{gen}}}	  \\ \cmidrule(lr){1-5}
-              \tsc{[gen]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{nom}} 	& \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{acc}} & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{dat}} & \colorbox{LG}{\tsc{gen}}				                                  \\
-            \bottomrule
-          \end{tabularx}
-        \end{minipage}
-    \end{table}
-
-    \subsection{Old High German}
 
 
-\ex. \tsc{ext:acc}, \tsc{int:nom}
+\subsection{Old High German}
+
+
+\ex. \tsc{int:nom}, \tsc{ext:acc}
 \ag. ih bibringu fona Juda dhen mina berga chisetzit\\
-  I educate von Juda D-\tsc{m/n/f.pl.dat}/\tsc{m.sg.acc} my? mountain order/put\\
-  `' \hfill (Old High German, Isidor 34,3, \citealt[761]{behaghel1923})
+ I educate von Juda D-\tsc{m/n/f.pl.dat}/\tsc{m.sg.acc} my? mountain order/put\\
+ `' \hfill (Old High German, Isidor 34,3, \citealt[761]{behaghel1923})
 
-\ex. \tsc{ext:dat}, \tsc{int:nom}
+\ex. \tsc{int:nom}, \tsc{ext:dat}
 \ag. Aer antuurta demo zaimo sprah.\\
 he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
 `He replied to the one who spoke to him.' \hfill (Old High German, Monsee Fragments 7,24, \citealt[761]{behaghel1923})
@@ -101,18 +141,18 @@ he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
  give\scsub{[dat]} D--\tsc{m.sg.dat} not posses\scsub{[nom]}\\
  `give to whom that does not have' gebe dem der nicht hat \hfill (Old High German, Otfrid I,24,77, Schrodt,175)
 
- \ex. \tsc{ext:dat}, \tsc{int:acc}
- \ag. istû furira Abrâhame, ouh thên man hiar nû zalta?\\
-  {are you} {superior to}\scsub{[dat]} Abraham also D-\tsc{d.pl} one here now mentioned\scsub{[acc]}\\
-  `are you bigger than Abraham and those people named just now?' \hfill (Old High German, Otfrid III,18,33, \citealt[761]{behaghel1923})
-
-\ex. \tsc{ext:gen}, \tsc{int:nom}
+\ex. \tsc{int:nom}, \tsc{ext:gen}
 \ag. suachit thes nan sentit\\
  search.\tsc{3.sg}\scsub{gen?} D-\tsc{n.sg.gen} \tsc{3.sg.m.acc} sent\\
  `he searched for who sent him/ der sucht die Sachen dessen der ihn sendet' \hfill (Old High German, Otfrid III,16,21, \citealt[761]{behaghel1923})
 \bg. diu habe niemer niht entuot, des der seele schaden si\\
  they have not never {not do} D-\tsc{gen.sg.n} the soul damage is\scsub{[nom]}\\
  `' \hfill (Middle High German, Warn. 2490, \citealt[761]{behaghel1923})
+
+\ex. \tsc{int:acc}, \tsc{ext:dat}
+\ag. istû furira Abrâhame, ouh thên man hiar nû zalta?\\
+ {are you} {superior to}\scsub{[dat]} Abraham also D-\tsc{d.pl} one here now mentioned\scsub{[acc]}\\
+ `are you bigger than Abraham and those people named just now?' \hfill (Old High German, Otfrid III,18,33, \citealt[761]{behaghel1923})
 
 \ex. \tsc{ext:gen}, \tsc{int:acc}
 \ag. der bewiset in des er suochte\\
@@ -151,147 +191,145 @@ he replied\scsub{[dat]} D-\tsc{m.sg.dat} {to him} spoke\scsub{[nom]}\\
 % So, to sum up:
 
 
-  \begin{table}[h]
-    \center
-    \caption {Case attraction in headless relatives in Old High German}
-      \begin{minipage}{\linewidth}
-        \begin{tabularx}{\textwidth}{c|Y|Y|Y|Y}
-          \toprule
-            \diagbox[linecolor=white]{\tsc{ext}}{\tsc{int}}	  & \tsc{[nom]}                                                       & \tsc{[acc]} 	                                                  & \tsc{[dat]} 											                & \tsc{[gen]} 											                  \\ \cmidrule(lr){1-5}
-            \tsc{[nom]} 		                                  & \colorbox{LG}{\tsc{nom}} 			                                    & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{acc}} 	            & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{dat}} & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{gen}} 	\\ \cmidrule(lr){1-5}
-            \tsc{[acc]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{*\tsc{nom}} 	&	\colorbox{LG}{\tsc{acc}} 		                                   	&	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{dat}} &	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{gen}}   \\ \cmidrule(lr){1-5}
-            \tsc{[dat]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{nom}}	  &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{acc}} & \colorbox{LG}{\tsc{dat}} 			                    & \diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{gen}}	  \\ \cmidrule(lr){1-5}
-            \tsc{[gen]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{nom}} 	& \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{acc}} & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{dat}} 	& \colorbox{LG}{\tsc{gen}}				                  \\
-          \bottomrule
-        \end{tabularx}
-      \end{minipage}
-  \end{table}
+
+\begin{table}[h]
+  \center
+  \caption {Case attraction in headless relatives in Old High German}
+    \begin{minipage}{\linewidth}
+      \begin{tabularx}{\textwidth}{c|Y|Y|Y|Y}
+        \toprule
+          \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}	  & \tsc{[nom]}                                                       & \tsc{[acc]} 	                                                  & \tsc{[dat]} 											                              & \tsc{[gen]} 											                                \\ \cmidrule(lr){1-5}
+          \tsc{[nom]} 		                                  & \colorbox{LG}{\tsc{nom}} 			                                    & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{acc}}} & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{dat}}} & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{gen}}} 	\\ \cmidrule(lr){1-5}
+          \tsc{[acc]} 		                                  & \diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{nom}} 	&	\colorbox{LG}{\tsc{acc}} 		                                   	&	\diagbox[linecolor=white]{*\tsc{acc}}{\colorbox{DG}{\tsc{dat}}} &	\diagbox[linecolor=white]{*\tsc{acc}}{\colorbox{DG}{\tsc{gen}}}   \\ \cmidrule(lr){1-5}
+          \tsc{[dat]} 		                                  & \diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{nom}}	  &	\diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{acc}} & \colorbox{LG}{\tsc{dat}} 			                                  & \diagbox[linecolor=white]{*\tsc{dat}}{\colorbox{DG}{\tsc{gen}}}	  \\ \cmidrule(lr){1-5}
+          \tsc{[gen]} 		                                  & \diagbox[linecolor=white]{*\tsc{gen}}{*\tsc{nom}} 	& \diagbox[linecolor=white]{*\tsc{gen}}{*\tsc{acc}} & \diagbox[linecolor=white]{*\tsc{gen}}{*\tsc{dat}} & \colorbox{LG}{\tsc{gen}}				                                  \\
+        \bottomrule
+      \end{tabularx}
+    \end{minipage}
+\end{table}
 
 
 
+\subsection{Modern German}
 
+\ex. \tsc{int:nom}, \tsc{ext:acc}
+\ag. *Ich {lade ein}, w-er mir sympathisch ist.\\
+ I invite\scsub{[acc]} W-\tsc{m/f.sg.nom} me nice is\scsub{[nom]}\\
+ `I invite who I like.' \hfill \citep[344]{vogel2001}
+\bg. *Ich {lade ein}, w-en mir sympathisch ist.\\
+ I invite\scsub{[acc]} W-\tsc{m/f.sg.acc} me nice is\scsub{[nom]}\\
+ `I invite who I like.' \hfill \citep[344]{vogel2001}
 
+\ex. \tsc{int:nom}, \tsc{ext:dat}
+\ag. *Ich vertraue, w-er Hitchcock mag.\\
+ I trust\scsub{[dat]} W-\tsc{m/f.sg.nom} Hitchcock likes\scsub{[nom]}\\
+ `I trust who likes Hitchcock.' \hfill \citep[345]{vogel2001}
+\bg. *Ich vertraue, w-em Hitchcock mag.\\
+ I trust\scsub{[dat]} W-\tsc{m/f.sg.dat} Hitchcock likes\scsub{[nom]}\\
+ `I trust who likes Hitchcock.' \hfill \citep[345]{vogel2001}
 
-    \subsection{Modern German}
+\ex. \tsc{int:nom}, \tsc{ext:gen}
+\ag. *Bodo entledigt sich, w-er immer andere Ansichten hat als er.\\
+ Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.nom} ever other opinions has\scsub{[nom]} than he\\
+ `Bodo gets rid of whoever has different opinions than he.' \hfill \citep[345]{vogel2001}
+\bg. *Bodo entledigt sich, w-essen immer andere Ansichten hat als er.\\
+ Bodo rids\scsub{[gen]} self  W-\tsc{m/f.sg.gen} ever other opinions has\scsub{[nom]} than he\\
+ `Bodo gets rid of whoever has different opinions than he.' \hfill \citep[345]{vogel2001}
 
-\subsubsection{Grammatical examples}
+\ex. \tsc{int:acc}, \tsc{ext:nom}
+\ag. Uns besucht w-en Maria mag.\\
+ Us visits\scsub{[nom]} W-\tsc{m/f.sg.acc} Maria.\tsc{nom} likes\scsub{[acc]}\\
+ `Who visits us likes Maria likes.' \hfill \citep[343]{vogel2001}
+\bg. *Uns besucht w-er Maria mag.\\
+ Us visits\scsub{[nom]} W-\tsc{m/f.sg.nom} Maria.\tsc{nom} likes\scsub{[acc]}\\
+ `Who visits us likes Maria likes.' \hfill \citep[343]{vogel2001}
 
-\ex. \tsc{ext:nom}, \tsc{int:acc}
-\ag. Uns besucht wen Maria mag.\\
- Us visits\scsub{[nom]} W-\tsc{m/f.sg.acc} Maria likes\scsub{acc}\\
- `Who visits us likes Maria likes.' \hfill \citep[344]{vogel2001}
-\bg. *Uns besucht wer Maria mag.\\
- Us visits\scsub{[nom]} W-\tsc{m/f.sg.nom} Maria likes\scsub{acc}\\
- `Who visits us likes Maria likes.' \hfill \citep[344]{vogel2001}
+ \ex. \tsc{int:acc}, \tsc{ext:dat}
+\ag. *Ich vertraue w-em auch Maria mag. \\
+ I trust\scsub{[dat]} W-\tsc{m/f.sg.dat} also Maria likes\scsub{[acc]}.\\
+ `I trust whoever Maria also likes.' \hfill \citep[345]{vogel2001}
+\bg. *Ich vertraue w-en auch Maria mag. \\
+ I trust\scsub{[dat]} W-\tsc{m/f.sg.acc} also Maria likes\scsub{[acc]}.\\
+ `I trust whoever Maria also likes.' \hfill \citep[345]{vogel2001}
 
-\ex. \tsc{ext:nom}, \tsc{int:dat}
-\ag. Uns besucht wem Maria vertraut.\\
- us visits\scsub{[nom]} W-\tsc{m/f.sg.dat} Maria trusts\scsub{dat}\\
+\ex. \tsc{int:acc}, \tsc{ext:gen}
+\ag. *Bodo entledigt sich, w-en immer Henkel nicht mag.\\
+ Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.acc} ever Henkel not likes\scsub{[acc]}\\
+ `Bodo gets rid of whoever Henkel does not like.' \hfill \citep[344]{vogel2001}
+\bg. *Bodo entledigt sich, w-essen immer Henkel nicht mag.\\
+ Bodo rids\scsub{[gen]} self  W-\tsc{m/f.sg.gen} ever Henkel not likes\scsub{[acc]}\\
+ `Bodo gets rid of whoever Henkel does not like.' \hfill \citep[344]{vogel2001}
+
+\ex. \tsc{int:dat}, \tsc{ext:nom}
+\ag. Uns besucht w-em Maria vertraut.\\
+ us visits\scsub{[nom]} W-\tsc{m/f.sg.dat} Maria trusts\scsub{[dat]}\\
  `Who visits us, Maria trusts.' \hfill \citep[343]{vogel2001}
-\bg. *Uns besucht wer Maria vertraut.\\
- us visits\scsub{[nom]} W-\tsc{m/f.sg.dat} Maria trusts\scsub{dat}\\
+\bg. *Uns besucht w-er Maria vertraut.\\
+ us visits\scsub{[nom]} W-\tsc{m/f.sg.dat} Maria trusts\scsub{[dat]}\\
  `Who visits us, Maria trusts.' \hfill \citep[343]{vogel2001}
 
-\ex. \tsc{ext:nom}, \tsc{int:gen}
-\ag. Uns besucht wessen Maria sich erfreuen würde.\\
+\ex. \tsc{int:dat}, \tsc{ext:acc}
+\ag. Ich {lade ein} w-em auch Maria vertraut. \\
+ I invite\scsub{[acc]} W-\tsc{m/f.sg.dat} also Maria trusts\scsub{[dat]}.\\
+ `I invite whoever Maria also trusts.' \hfill \citep[344]{vogel2001}
+\bg. *Ich {lade ein} w-en auch Maria vertraut. \\
+ I invite\scsub{[acc]} W-\tsc{m/f.sg.acc} also Maria trusts\scsub{[dat]}.\\
+ `I invite whoever Maria also trusts.' \hfill \citep[344]{vogel2001}
+
+\ex. \tsc{int:dat}, \tsc{ext:gen}
+\ag. *Maria hilft, w-essen andere sich entledigen möchten.\\
+ Maria helps\scsub{[dat]} W-\tsc{m/f.sg.gen} others self rid\scsub{[gen]} want\\
+ `Maria helps whoever others want to get rid of.' \hfill \citep[344]{vogel2001}
+\bg. *Maria hilft, w-em andere sich entledigen möchten.\\
+ Maria helps\scsub{[dat]} W-\tsc{m/f.sg.dat} others self rid\scsub{[gen]} want\\
+ `Maria helps whoever others want to get rid of.' \hfill \citep[344]{vogel2001}
+
+\ex. \tsc{int:gen}, \tsc{ext:nom}
+\ag. Uns besucht w-essen Maria sich erfreuen würde.\\
  us visits\scsub{[nom]} W-\tsc{m/f.sg.gen} Maria self {be happy}\scsub{[gen]} would\\
- `Who visits us, Maria would be happy about' \hfill \citep[344]{vogel2001}
-\bg. *Uns besucht wer Maria sich erfreuen würde.\\
+ `Who visits us, Maria would be happy about' \hfill \citep[343]{vogel2001}
+\bg. *Uns besucht w-er Maria sich erfreuen würde.\\
  us visits\scsub{[nom]} W-\tsc{m/f.sg.nom} Maria self {be happy}\scsub{[gen]} would\\
- `Who visits us, Maria would be happy about' \hfill \citep[344]{vogel2001}
+ `Who visits us, Maria would be happy about' \hfill \citep[343]{vogel2001}
 
-\ex. \tsc{ext:acc}, \tsc{int:dat}
-\ag. Ich {lade ein} wem auch Maria vertraut. \\
- I invite\scsub{[acc]} W-\tsc{m/f.sg.dat} also Maria trusts\scsub{dat}.\\
- `I invite whoever Maria also trusts.' \hfill \citep[344]{vogel2001}
-\bg. *Ich {lade ein} wen auch Maria vertraut. \\
- I invite\scsub{[acc]} W-\tsc{m/f.sg.acc} also Maria trusts\scsub{dat}.\\
- `I invite whoever Maria also trusts.' \hfill \citep[344]{vogel2001}
-
-\ex. \tsc{ext:acc}, \tsc{int:gen}
-\ag. Ich {lade ein}, wessen sich auch Maria erfreuen würde.\\
+\ex. \tsc{int:gen}, \tsc{ext:acc}
+\ag. Ich {lade ein}, w-essen sich auch Maria erfreuen würde.\\
  I invite\scsub{[acc]} W-\tsc{m/f.sg.gen} self also Maria {be happy}\scsub{[gen]} would.\\
  `I invite whoever also Maria would be happy to meet.' \hfill \citep[344]{vogel2001}
-\bg. *Ich {lade ein}, wen sich auch Maria erfreuen würde.\\
+\bg. *Ich {lade ein}, w-en sich auch Maria erfreuen würde.\\
  I invite\scsub{[acc]} W-\tsc{m/f.sg.acc} self also Maria {be happy}\scsub{[gen]} would.\\
  `I invite whoever also Maria would be happy to meet.' \hfill \citep[344]{vogel2001}
 
-\ex. \tsc{ext:dat}, \tsc{int:gen}
-\ag. ?Bodo entledigt sich, wem immer Gerhard misstraut.\\
- Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.dat} ever Gerhard mistrusts\scsub{dat}\\
+\ex. \tsc{int:gen}, \tsc{ext:dat}
+\ag. ?Bodo entledigt sich, w-em immer Gerhard misstraut.\\
+ Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.dat} ever Gerhard mistrusts\scsub{[dat]}\\
  `Bodo gets rid of whoever Gerhard mistrusts.' \hfill \citep[345]{vogel2001}
-\bg. ?Bodo entledigt sich, wessen immer Gerhard misstraut.\\
- Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.gen} ever Gerhard mistrusts\scsub{dat}\\
+\bg. ?Bodo entledigt sich, w-essen immer Gerhard misstraut.\\
+ Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.gen} ever Gerhard mistrusts\scsub{[dat]}\\
  `Bodo gets rid of whoever Gerhard mistrusts.' \hfill \citep[345]{vogel2001}
 
 
-\subsubsection{Ungrammatical examples}
-
-\ex. \tsc{ext:acc}, \tsc{int:nom}
-\ag. *Ich {lade ein}, wen mir sympathisch ist.\\
- I invite\scsub{[acc]} W-\tsc{m/f.sg.acc} me nice is\scsub{nom}\\
- `I invite who I like.' \hfill \citep[344]{vogel2001}
-\bg. *Ich {lade ein}, wer mir sympathisch ist.\\
- I invite\scsub{[acc]} W-\tsc{m/f.sg.nom} me nice is\scsub{nom}\\
- `I invite who I like.' \hfill \citep[344]{vogel2001}
-
-\ex. \tsc{ext:dat}, \tsc{int:nom}
-\ag. *Ich vertraue, wem Hitchcock mag.\\
- I trust\scsub{[dat]} W-\tsc{m/f.sg.dat} Hitchcock likes\scsub{nom}\\
- `I trust who likes Hitchcock.' \hfill \citep[345]{vogel2001}
-\bg. *Ich vertraue, wer Hitchcock mag.\\
- I trust\scsub{[dat]} W-\tsc{m/f.sg.nom} Hitchcock likes\scsub{nom}\\
- `I trust who likes Hitchcock.' \hfill \citep[345]{vogel2001}
-
-\ex. \tsc{ext:dat}, \tsc{int:acc}
-\ag. *Ich vertraue wem auch Maria mag. \\
- I trust\scsub{[dat]} W-\tsc{m/f.sg.dat} also Maria likes\scsub{acc}.\\
- `I trust whoever Maria also likes.' \hfill \citep[345]{vogel2001}
-\bg. *Ich vertraue wen auch Maria mag. \\
- I trust\scsub{[dat]} W-\tsc{m/f.sg.acc} also Maria likes\scsub{acc}.\\
- `I trust whoever Maria also likes.' \hfill \citep[345]{vogel2001}
-
-\ex. \tsc{ext:gen}, \tsc{int:nom}
-\ag. *Bodo entledigt sich, wessen immer andere Ansichten hat als er.\\
- Bodo rids\scsub{[gen]} self  W-\tsc{m/f.sg.gen} ever other opinions has\scsub{[nom]} than he\\
- `Bodo gets rid of whoever has different opinions than he.' \hfill \citep[345]{vogel2001}
-\bg. *Bodo entledigt sich, wer immer andere Ansichten hat als er.\\
- Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.nom} ever other opinions has\scsub{[nom]} than he\\
- `Bodo gets rid of whoever has different opinions than he.' \hfill \citep[345]{vogel2001}
-
-\ex. \tsc{ext:gen}, \tsc{int:acc}
-\ag. *Bodo entledigt sich, wessen immer Henkel nicht mag.\\
- Bodo rids\scsub{[gen]} self  W-\tsc{m/f.sg.gen} ever Henkel not likes\scsub{acc}\\
- `Bodo gets rid of whoever Henkel does not like.' \hfill \citep[344]{vogel2001}
-\bg. *Bodo entledigt sich, wen immer Henkel nicht mag.\\
- Bodo rids\scsub{[gen]} self W-\tsc{m/f.sg.acc} ever Henkel not likes\scsub{acc}\\
- `Bodo gets rid of whoever Henkel does not like.' \hfill \citep[344]{vogel2001}
-
-\ex. \tsc{ext:gen}, \tsc{int:dat}
-\ag. *Maria hilft, wem andere sich entledigen möchten.\\
- Maria helps\scsub{[dat]} W-\tsc{m/f.sg.dat} others self rid\scsub{[gen]} want\\
- `Maria helps whoever others want to get rid of.' \hfill \citep[344]{vogel2001}
-\bg. *Maria hilft, wessen andere sich entledigen möchten.\\
- Maria helps\scsub{[dat]} W-\tsc{m/f.sg.gen} others self rid\scsub{[gen]} want\\
- `Maria helps whoever others want to get rid of.' \hfill \citep[344]{vogel2001}
 
 \subsubsection{Summary of the data}
 
-    \begin{table}[h]
-      \center
-      \caption {Case attraction in headless relatives in Modern German}
-        \begin{minipage}{\linewidth}
-          \begin{tabularx}{\textwidth}{c|Y|Y|Y|Y}
-            \toprule
-              \diagbox[linecolor=white]{\tsc{ext}}{\tsc{int}}	  & \tsc{[nom]}                                                       & \tsc{[acc]} 	                                                  & \tsc{[dat]} 											                              & \tsc{[gen]} 											                                \\ \cmidrule(lr){1-5}
-              \tsc{[nom]} 		                                  & \colorbox{LG}{\tsc{nom}} 			                                    & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{acc}}} & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{dat}}} & \diagbox[linecolor=white]{*\tsc{nom}}{\colorbox{DG}{\tsc{gen}}} 	\\ \cmidrule(lr){1-5}
-              \tsc{[acc]} 		                                  & \diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{nom}} 	&	\colorbox{LG}{\tsc{acc}} 		                                   	&	\diagbox[linecolor=white]{*\tsc{acc}}{\colorbox{DG}{\tsc{dat}}} &	\diagbox[linecolor=white]{*\tsc{acc}}{\colorbox{DG}{\tsc{gen}}}   \\ \cmidrule(lr){1-5}
-              \tsc{[dat]} 		                                  & \diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{nom}}	  &	\diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{acc}} & \colorbox{LG}{\tsc{dat}} 			                                  & \diagbox[linecolor=white]{*\tsc{dat}}{\colorbox{DG}{\tsc{gen}}}	  \\ \cmidrule(lr){1-5}
-              \tsc{[gen]} 		                                  & \diagbox[linecolor=white]{*\tsc{gen}}{*\tsc{nom}} 	& \diagbox[linecolor=white]{*\tsc{gen}}{*\tsc{acc}} & \diagbox[linecolor=white]{*\tsc{gen}}{*\tsc{dat}} & \colorbox{LG}{\tsc{gen}}				                                  \\
-            \bottomrule
-          \end{tabularx}
-        \end{minipage}
-    \end{table}
+\begin{table}[h]
+  \center
+  \caption {Case attraction in headless relatives in Modern German}
+    \begin{minipage}{\linewidth}
+      \begin{tabularx}{\textwidth}{c|Y|Y|Y|Y}
+        \toprule
+          \diagbox[linecolor=white]{\tsc{int}}{\tsc{ext}}	  & \tsc{[nom]}                                                       & \tsc{[acc]} 	                                                  & \tsc{[dat]} 											                & \tsc{[gen]} 											                  \\ \cmidrule(lr){1-5}
+          \tsc{[nom]} 		                                  & \colorbox{LG}{\tsc{nom}} 			                                    & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{acc}} 	            & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{dat}} & \diagbox[linecolor=white]{*\tsc{nom}}{*\tsc{gen}} 	\\ \cmidrule(lr){1-5}
+          \tsc{[acc]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{acc}}}{*\tsc{nom}} 	&	\colorbox{LG}{\tsc{acc}} 		                                   	&	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{dat}} &	\diagbox[linecolor=white]{*\tsc{acc}}{*\tsc{gen}}   \\ \cmidrule(lr){1-5}
+          \tsc{[dat]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{nom}}	  &	\diagbox[linecolor=white]{\colorbox{DG}{\tsc{dat}}}{*\tsc{acc}} & \colorbox{LG}{\tsc{dat}} 			                    & \diagbox[linecolor=white]{*\tsc{dat}}{*\tsc{gen}}	  \\ \cmidrule(lr){1-5}
+          \tsc{[gen]} 		                                  & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{nom}} 	& \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{acc}} & \diagbox[linecolor=white]{\colorbox{DG}{\tsc{gen}}}{*\tsc{dat}} 	& \colorbox{LG}{\tsc{gen}}				                  \\
+        \bottomrule
+      \end{tabularx}
+    \end{minipage}
+\end{table}
+
+
+
 
 
   \section{Background: relative clause theory}
